UD-619: Fixed overflow for navbar

--- a/src/app/index.styl
+++ b/src/app/index.styl
@@ -33,6 +33,9 @@ codenvy-developers-face()
 .dark-menu-bg
   background-color $menu-bg-color
 
+md-sidenav.dark-menu-bg
+  overflow auto
+
   img.pull-right
     width 50px
 
